- Fix display issue in workspace list; now truncating words

--- a/app/styles/less/browser.less
+++ b/app/styles/less/browser.less
@@ -341,6 +341,8 @@ table.workspace-elements {
       margin-left: -@grid-gutter-width/2;
       margin-right: -@grid-gutter-width/2;
       padding: @padding-large-vertical @grid-gutter-width/2+@padding-base-horizontal;
+      text-overflow: ellipsis;
+      overflow: hidden;
       &:hover {
         background-color: @orange-lighter;
         color: #FFFFFF;
